[package]
name = "asteroid_rush"
version = "0.1.0"
edition = "2021"

[dependencies]
ramp = { package = "ramp2", path = "../ramp" }
quartz = { path = "../quartz" }

[lib]
name="main"
crate-type=["staticlib", "cdylib", "rlib"]

[patch.crates-io]
prism2 = { path = "../prism" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]